--- a/modulo 3/src/index.html
+++ b/modulo 3/src/index.html
@@ -8,5 +8,7 @@
   <body>
     <h1>Hello Webpack</h1>
     <div class="red-background">Red background stuff</div>
+    <div id="imgContainer"></div>
+    <div><img src="./content/logo_2.png" alt="logo_2" /></div>
   </body>
 </html>
