saving work - css modules

--- a/modulo 3/src/index.html
+++ b/modulo 3/src/index.html
@@ -6,9 +6,6 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Hello Webpack</h1>
-    <div class="red-background">Red background stuff</div>
-    <div id="imgContainer"></div>
-    <div><img src="./content/logo_2.png" alt="logo_2" /></div>
+    <div id="root"></div>
   </body>
 </html>
